--- a/client/src/component/chat/chat.css
+++ b/client/src/component/chat/chat.css
@@ -5,73 +5,35 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.paper {
-  align-items: center;
-  width: 50%;
-  justify-content: center;
+.mainScreen{
+  background-color:white;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  margin: auto;
+  padding: 2em;
 }
-.header {
-  margin: auto;
+.title{
+  padding: 0.5em;
+  margin: 0.5em;
+  border: .1em solid #F13223;
+}
+.chatScreen{
+  padding: 1em 0;
+  border: .1em solid #F13223;
+  margin: 1em;
+}
+.item{
+  padding: .1em 0;
+  margin: .5em;
+
+}
+.typeScreen{
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-#card {
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  max-height: 30em;
-  min-height: 30em;
-}
-.message {
-  text-align: left;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  width: 40%;
-  margin: 0.5em;
-  /* ff 3.6+ */
-  background: -moz-linear-gradient(
-    90deg,
-    rgba(0, 188, 212, 1) 0%,
-    rgba(63, 81, 181, 1) 100%
-  );
-
-  /* safari 5.1+,chrome 10+ */
-  background: -webkit-linear-gradient(
-    90deg,
-    rgba(0, 188, 212, 1) 0%,
-    rgba(63, 81, 181, 1) 100%
-  );
-
-  /* opera 11.10+ */
-  background: -o-linear-gradient(
-    90deg,
-    rgba(0, 188, 212, 1) 0%,
-    rgba(63, 81, 181, 1) 100%
-  );
-
-  /* ie 6-9 */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#00BCD4', GradientType=0 );
-
-  /* ie 10+ */
-  background: -ms-linear-gradient(
-    90deg,
-    rgba(0, 188, 212, 1) 0%,
-    rgba(63, 81, 181, 1) 100%
-  );
-
-  /* global 94%+ browsers support */
-  background: linear-gradient(
-    90deg,
-    rgba(0, 188, 212, 1) 0%,
-    rgba(63, 81, 181, 1) 100%
-  );
-}
-.sendMessage {
-  padding: 1em;
-  display: inline-block;
-  justify-content: space-between;
+.sendButton{
+  
 }
