--- a/client/src/component/chat/chat.css
+++ b/client/src/component/chat/chat.css
@@ -6,27 +6,23 @@ body {
   background-size: cover;
 }
 .mainScreen{
-  background-color:white;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 2em;
+  padding: 1em;
 }
 .title{
-  padding: 0.5em;
-  margin: 0.5em;
+  padding: 0.2em;
   border: .1em solid #F13223;
 }
 .chatScreen{
-  padding: 1em 0;
+  padding: 0.5em 0;
   border: .1em solid #F13223;
   margin: 1em;
 }
 .item{
-  padding: .1em 0;
   margin: .5em;
-
 }
 .typeScreen{
   display: flex;
@@ -34,6 +30,25 @@ body {
   justify-content: center;
   align-items: center;
 }
-.sendButton{
-  
+.username{
+  padding: 0 0.4em;
+}
+.texts{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items:flex-end;
+  height: 28em;
+  overflow-y:scroll ;
+}
+.text{
+  background-color: #F13223;
+  font-size:smaller;
+  word-wrap: break-word;
+  border: #F13223;
+  max-width: 15em;
+  padding: 0 .4em;
+  row-gap: .1em;
+  transition: width 2s;
+  border-radius: .3em;
 }
